Implement registration of surface rules & conditions